--- a/wp-content/themes/hssw_theme/style.css
+++ b/wp-content/themes/hssw_theme/style.css
@@ -46,6 +46,23 @@
 header.site-header {
   background-color: #dcdcdc !important;
 }
+header.site-header .inside-header {
+  position: relative;
+}
+header.site-header .secondary-nav {
+  position: absolute;
+  right: 40px;
+  top: 10px;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+}
+header.site-header .secondary-nav ul {
+  display: flex;
+  list-style: none;
+}
+header.site-header .secondary-nav ul li {
+  padding: 0 10px;
+}
 
 .featured-authors, .featured-blog-posts {
   flex-wrap: wrap;
