--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -1,43 +1,20 @@
-/*
- Theme Name:   HSSW Theme
- Theme URI:    https://generatepress.com
- Description:  HSSW GeneratePress child theme
- Author:       Charles Bent
- Template:     generatepress
- Version:      0.1
-*/
-
-// variables
-$black: #000000;
-$gray: #dcdcdc;
-$white: #ffffff;
-
-// screen sizes
-$screen-xs-min: 576px;
-$screen-sm-min: 768px;
-$screen-md-min: 992px;
-$screen-lg-min: 1200px;
-
-// clearfix
-@mixin clearfix() {
-  &:after {
-    content: "";
-    display: block;
-    clear: both;
+// sidebar primary layout
+.sidebar-primary {
+  .wrap > .content {
+    @extend .row;
+    .main {
+      @extend .col-sm-9;
+    }
+    .sidebar {
+      @extend .col-sm-3;
+    }
+    .owl-carousel {
+      @extend .col-12;
+    }
   }
 }
 
-// general styling
-body {
-  background-color: $black !important;
-  font-family: "Open Sans", Arial, sans-serif;
-}
-
-button {
-  &.search-submit {
-    height: 47px;
-  }
-}
+// home page styling
 
 // features carousel on home page
 .features-carousel {
@@ -77,45 +54,6 @@ button {
   }
 }
 
-// general layout styling
-.one-container {
-  .site-content {
-    padding: 20px 0;
-    .content-area {
-      &.no-sidebar {
-        width: 100%;
-      }
-      .inside-article {
-        @include clearfix;
-      }
-    }
-  }
-}
-
-
-// header styling
-header.site-header {
-  background-color: $gray !important;
-  .inside-header {
-    position: relative;
-  }
-  .secondary-nav {
-    position: absolute;
-    right: 40px;
-    top: 10px;
-    text-transform: uppercase;
-    font-size: .875rem;
-    ul {
-      display: flex;
-      list-style: none;
-      li {
-        padding: 0 10px;
-      }
-    }
-  }
-}
-
-// home page styling
 .featured-authors, .featured-blog-posts {
   flex-wrap: wrap;
   margin-bottom: 40px;
@@ -156,7 +94,6 @@ header.site-header {
   }
 }
 
-
 article.type-people {
   .featured-image {
     @media (min-width: $screen-sm-min) {
@@ -182,18 +119,6 @@ article.type-people {
       float: right;
       padding-left: 20px;
       width: 50%;
-    }
-  }
-}
-
-// blog posts styling
-.type-post {
-  @media (min-width: $screen-sm-min) {
-    .post-image, .featured-image {
-      float: right;
-      padding-left: 20px;
-      width: 33%;
-      @include clearfix;
     }
   }
 }
