misc updates to hssw sage theme

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
@@ -6,7 +6,7 @@ $black: #000;
 $dark-gray: #333;
 $gray: #dcdcdc;
 $white: #fff;
-$red: #bf1e2e;
+$red: #ee2015;
 
 $body-color: $white;
 $link-color: $red;
