--- a/wp-content/themes/hssw_theme/sass/style.scss
+++ b/wp-content/themes/hssw_theme/sass/style.scss
@@ -99,6 +99,12 @@ header.site-header {
   .inside-header {
     position: relative;
   }
+  .site-logo {
+    img {
+      height: 80px;
+      width: auto;
+    }
+  }
   .secondary-nav {
     position: absolute;
     right: 40px;
