--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
@@ -14,6 +14,8 @@ $link-color: $red;
 // fonts
 $typewriter: "Special Elite", cursive;
 $font-family-base: "Nunito Sans", sans-serif;
+$fontawesome: "Font Awesome 5 Free";
+$serif: "Esteban", serif;
 
 // screen sizes
 $screen-xs-min: 576px;
