update background image url

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -1,6 +1,6 @@
 body {
   background-color: $dark-gray;
-  background-image: url("../images/beigelightbg_hssw.jpg");
+  background-image: url("http://iag.eos.mybluehost.me/hssw/wp-content/themes/hssw-sage/dist/images/beigelightbg_hssw.jpg");
   background-size: cover;
   &#tinymce {
     background: $black;
