--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -54,9 +54,10 @@
   }
 }
 
-.featured-authors, .featured-blog-posts {
+.featured-authors, .featured-blog-posts, .featured-events {
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  border-bottom: 1px $white solid;
   .row {
     margin-bottom: 20px;
   }
