--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_sidebar.scss
@@ -8,6 +8,11 @@
     }
   }
   .ctct-inline-form {
+    background: linear-gradient(to bottom, cadetblue, gold);
+    padding: 4px;
+    .ctct-form-container {
+      background: $black;
+    }
     .ctct-form-defaults {
       border-radius: 0;
       font-size: .875rem;
