--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -231,8 +231,11 @@ header.banner {
     text-transform: uppercase;
     .menu-item {
       a {
-        padding: 0 .5rem;
+        padding: 0 10px;
         color: $gray;
+        &:hover {
+          color: $red;
+        }
       }
     }
   }
