--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -36,3 +36,10 @@ a {
 h1, h2, h3, h4 {
   //font-family: $serif;
 }
+
+form {
+  input[type=text], textarea {
+    width: 100%;
+    max-width: $screen-md-min;
+  }
+}
