misc style updates; update homepage titles

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -35,6 +35,12 @@ a {
 
 h1, h2, h3, h4 {
   //font-family: $serif;
+  a {
+    color: $gold;
+    &:hover {
+      color: $white;
+    }
+  }
 }
 
 form {
