update gold color; update menu link and h1 header colors to gold

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
@@ -7,9 +7,9 @@ $dark-gray: #333;
 $gray: #dcdcdc;
 $white: #fff;
 $red: #ee2015;
-$gold: #dba734;
+$gold: #ffb966;
 $body-color: $white;
-$link-color: $red;
+$link-color: $gold;
 
 // fonts
 $nunito: "Nunito Sans", sans-serif;
