--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -15,7 +15,13 @@
 }
 
 // home page styling
-
+.home {
+  .main {
+    h2 {
+      color: $gold;
+    }
+  }
+}
 // features carousel on home page
 .features-carousel {
   position: relative;
