misc style updates for colors, fonts, headers, etc.

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
@@ -8,6 +8,7 @@ $gray: #dcdcdc;
 $white: #fff;
 $red: #ee2015;
 $gold: #ffb966;
+$turqoise: #40E0D0;
 $body-color: $white;
 $link-color: $gold;
 
@@ -18,6 +19,8 @@ $typewriter: "Special Elite", cursive;
 $font-family-base: $georgia;
 $fontawesome: "Font Awesome 5 Free";
 $serif: "Esteban", serif;
+$imfell: "IM Fell Great Primer", serif;
+$courier: "Courier New", Courier, monospace;
 
 // screen sizes
 $screen-xs-min: 576px;
