updated menu link hover color to red

--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -147,7 +147,7 @@ header.banner {
               position: relative;
               padding: 10px 0;
               &:hover {
-                color: $white;
+                color: $red;
               }
             }
 
