misc updates to styling, formatting, etc.

--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -158,8 +158,8 @@ header.banner {
             &.current-menu-item,
             &.current-menu-ancestor,
             &.current-page-ancestor {
-              a {
-                color: $white;
+              > a {
+                color: $red;
                 &::after {
                   content: "";
                   position: absolute;
