--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -44,6 +44,13 @@ h1, h2, h3, h4 {
 }
 h1 {
   color: $gold;
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 1.25rem;
 }
 
 form {
