--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_sidebar.scss
@@ -6,6 +6,9 @@
     label {
       margin-right: 5px;
     }
+    #search-fields {
+      display: block;
+    }
   }
   .ctct-inline-form {
     background: linear-gradient(to bottom, cadetblue, gold);
