--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -58,4 +58,21 @@ form {
     width: 100%;
     max-width: $screen-md-min;
   }
+  #search-fields {
+    .search-field {
+      padding: 2px 5px;
+      height: 25px;
+      width: 80%;
+      float: left;
+    }
+    .btn {
+      font-size: 12px;
+      padding: 3px 5px;
+      float: right;
+      color: $white;
+      border: none;
+      width: calc(20% - 5px);
+      min-width: 20px;
+    }
+  }
 }
