--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -137,11 +137,21 @@ article {
 }
 
 // event styling
-.tribe-events, .tribe-events-pg-template {
+.tribe-events, .tribe-events-pg-template, .tribe-events-single {
   width: 100%;
   color: $white !important;
   .tribe-events-l-container {
     padding: 20px 0 !important;
+  }
+  .tribe-events-meta-group {
+    .tribe-events-event-categories-label, .tribe-events-event-categories {
+      display: none;
+    }
+  }
+  .tribe-events-content {
+    div {
+      margin-bottom: 1rem;
+    }
   }
   button {
     @extend .btn;
@@ -156,13 +166,28 @@ article {
 .tribe-common {
   color: $white !important;
 }
-
 .type-tribe_events {
   @media (min-width: $screen-sm-min) {
     .tribe-events-event-image {
       float: right;
       padding-left: 20px;
       width: 50%;
+    }
+  }
+}
+
+// ecs events
+.ecs-event-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    margin-bottom: 20px;
+    @include clearfix;
+    img {
+      float: left;
+      max-width: 33%;
+      margin-right: 30px;
     }
   }
 }
