--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -53,6 +53,16 @@ h3 {
   font-size: 1.25rem;
 }
 
+.red {
+  color: $red;
+}
+.gold {
+  color: $gold;
+}
+.turqoise {
+  color: $turqoise;
+}
+
 form {
   input[type=text], textarea {
     width: 100%;
