styling updates; update event list functionality; etc.

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_variables.scss
@@ -9,8 +9,9 @@ $white: #fff;
 $red: #ee2015;
 $gold: #ffb966;
 $turqoise: #40E0D0;
+$purple: #a352cc;
 $body-color: $white;
-$link-color: $gold;
+$link-color: $purple;
 
 // fonts
 $nunito: "Nunito Sans", sans-serif;
