--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -52,7 +52,7 @@ header.banner {
         width: 100%;
         font-size: .875rem;
         a {
-          //color: $gray;
+          color: $gold;
           padding: 5px 0;
         }
 
