--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -162,6 +162,11 @@ article {
   input[type=text] {
     border: none;
   }
+  .tribe-tickets {
+    .tribe-tickets__title {
+      display: none;
+    }
+  }
 }
 .tribe-common {
   color: $white !important;
