--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -93,3 +93,26 @@ form {
 .su-vimeo, .su-youtube {
   margin-bottom: 10px;
 }
+
+.ctct-inline-form {
+  background: linear-gradient(to bottom, cadetblue, gold);
+  padding: 4px;
+  .ctct-form-container {
+    background: $black;
+  }
+  .ctct-form-defaults {
+    border-radius: 0;
+    font-size: .875rem;
+    .ctct-form-text, label, legend {
+      font-size: .875rem !important;
+    }
+    h2 {
+      font-size: 1.25rem !important;
+    }
+    input.ctct-form-element {
+      padding: 2px 5px !important;
+      height: 30px !important;
+    }
+  }
+}
+
