--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -27,27 +27,33 @@
   position: relative;
   .item {
     min-height: 400px;
-    background-color: $gray;
+    background-color: $black;
     text-align: center;
     display: flex;
     align-items: center;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     .item-content {
       margin: 0 auto;
-      background-color: rgba($white, .5);
-      padding: 20px;
-      min-width: 60%;
-      color: $red;
-      font-family: $courier;
-      h2 {
-
-      }
-    }
-    a {
+      background-color: rgba($black, .5);
       width: 100%;
       color: $red;
-      h1 {
-        color: $red;
+      img {
+        width: auto;
       }
+      //font-family: $courier;
+      h2 {
+        padding: 20px 20px 0 20px;
+      }
+      .text {
+        //padding: 0 20px 20px 20px;
+      }
+    }
+  }
+  a {
+    &:hover {
+      text-decoration: none;
     }
   }
   .owl-nav {
