--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -34,13 +34,13 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    &:after {
+    &.overlay:after {
       content: "";
       position: absolute;
       display: block;
       width: 100%;
       height: 100%;
-      background-color: rgba($black, .5);
+      background-color: rgba($black, .4);
     }
     .item-content {
       margin: 0 auto;
