header style updates

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -43,13 +43,15 @@ h1, h2, h3, h4 {
   }
 }
 h1 {
-  color: $turqoise;
+  color: $gold;
   font-size: 2rem;
 }
 h2 {
+  color: $turqoise;
   font-size: 1.5rem;
 }
 h3 {
+  color: $turqoise;
   font-size: 1.25rem;
 }
 
