--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -100,6 +100,11 @@
   border-bottom: 1px $white solid;
   .row {
     margin-bottom: 20px;
+    .image {
+      img {
+        width: 100%;
+      }
+    }
   }
   .wp-block-column {
     margin: 0 0 40px 0;
@@ -122,6 +127,7 @@
     }
   }
 }
+
 
 
 .featured-blog-posts {
