--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -54,32 +54,33 @@ header.banner {
         a {
           color: $gold;
           padding: 5px 0;
+          &:hover {
+            color: $red;
+          }
         }
 
         .sub-menu {
-          display: none;
+          //display: none;
           list-style: none;
-          margin: 0 0 10px 0;
+          text-transform: initial;
           padding: 0;
           max-width: 400px;
 
           .menu-item {
+            margin-left: 10px;
             padding: 0;
             font-size: 0.875rem;
             font-weight: 400;
             letter-spacing: normal;
+            a {
+              padding: 0 0 5px 0;
+            }
 
             .sub-menu {
               display: block;
               margin: 0 0 0 15px;
             }
           }
-        }
-      }
-
-      > .menu-item:hover {
-        > .sub-menu {
-          display: block;
         }
       }
     }
@@ -138,11 +139,15 @@ header.banner {
           float: right;
 
           .menu-item {
+            text-transform: uppercase;
             width: auto;
             border: none;
             padding: 0 10px;
             font-weight: 400;
-
+            margin: 0 0 10px 0;
+            &.secondary {
+              display: none;
+            }
             a {
               position: relative;
               padding: 10px 0;
@@ -175,6 +180,7 @@ header.banner {
             }
 
             .sub-menu {
+              display: none;
               position: absolute;
               min-width: 200px;
               width: auto;
@@ -185,7 +191,7 @@ header.banner {
                 font-size: 0.875rem;
                 float: none;
                 padding: 0 0 5px 0;
-
+                margin: 0;
                 a {
                   padding: 5px 0;
                   //color: $white;
@@ -214,6 +220,11 @@ header.banner {
               }
             }
           }
+          > .menu-item:hover {
+            > .sub-menu {
+              display: block;
+            }
+          }
         }
       }
 
@@ -228,6 +239,7 @@ header.banner {
     right: 30px;
     font-size: .675rem;
     text-transform: uppercase;
+    display: none;
     .menu-item {
       a {
         padding: 0 10px;
@@ -241,6 +253,9 @@ header.banner {
           color: $red;
         }
       }
+    }
+    @media (min-width: $screen-sm-min) {
+      display: block;
     }
   }
   .search-form {
