update styling for caption images

--- a/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/common/_global.scss
@@ -119,8 +119,14 @@ form {
   }
 }
 
+// wp-caption container styling
+.wp-caption {
+  max-width: 100%;
+}
+
 // caption styling
 .figure-caption, .wp-caption-text {
   color: $white;
 }
+
 
