update featured events stuff on homepage; nav bar update

--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_content.scss
@@ -82,6 +82,11 @@
       }
     }
   }
+  @media (min-width: $screen-xs-min) {
+    .item {
+      min-height: 300px;
+    }
+  }
   @media (min-width: $screen-sm-min) {
     .item {
       min-height: 400px;
