--- a/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/hssw-sage/resources/assets/styles/layouts/_header.scss
@@ -117,7 +117,7 @@ header.banner {
       }
     }
 
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $screen-md-min) {
       position: absolute;
       right: 0;
       top: 0;
